<resources>
    <string name="app_name">QRAnalyzer</string>
    <string name="prompt">Scan a QR code®</string>
    <string name="contents_begin">[Contents begin]</string>
    <string name="contents_end">[Contents end]</string>
    <string name="details">[Details]</string>
    <string name="decoding_succeeded">Decoding succeeded.</string>
    <string name="decoding_failed">Decoding failed.</string>
    <string name="error_correction_level">Error Correction Level</string>
    <string name="restoration_ability">Restoration Ability</string>
    <string name="version">Version</string>
    <string name="cell_size">Cell Size</string>
    <string name="raw_data">Raw Data</string>
    <string name="hex_contents">Hex Contents</string>
    <string name="there_is_residual_data">There is residual data.</string>
    <string name="residual_data">Residual Data</string>
    <string name="there_is_hidden_data">There is hidden data.</string>
    <string name="hidden_data">Hidden Data</string>
    <string name="it_is_an_sqrc">It is an SQRC®.</string>
    <string name="decryption_failed">Decryption failed.\nThe key might be wrong.</string>
    <string name="decrypted_contents">[Decrypted Contents]</string>
    <string name="exception_occurred">Exception occurred.</string>
    <string name="histories">Histories</string>
    <string name="settings">Settings</string>
    <string name="licenses">Licenses</string>
    <string name="analyzing">Analyzing…</string>
    <string name="beep">Beep</string>
    <string name="vibration">Vibration</string>
    <string name="not_yet_implemented">not yet implemented</string>
    <string name="sqrc_enabled">SQRC® enabled</string>
    <string name="encryption_keys">encryption keys</string>
    <string name="number_of_setting">Number of setting</string>
    <string name="key1">Key1</string>
    <string name="key2">Key2</string>
    <string name="key3">Key3</string>
    <string name="key4">Key4</string>
    <string name="key5">Key5</string>
    <string name="key6">Key6</string>
    <string name="key7">Key7</string>
    <string name="key8">Key8</string>
    <string name="key_is_invalid">Key%d is invalid</string>
</resources>